--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,15 +1,19 @@
 <mat-card>
-  <mat-form-field  appearance="fill">
-    <mat-label>Title</mat-label>
-    <input matInput type="text" [(ngModel)]="enteredTitle">
-  </mat-form-field>
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm">
+    <mat-form-field appearance="fill">
+      <mat-label>Title</mat-label>
+      <input matInput type="text" ngModel name="title" required #title="ngModel"/>
+      <mat-error *ngIf="title.invalid">Please enter a title</mat-error>
+    </mat-form-field>
 
-  <mat-form-field appearance="fill">
-    <mat-label>Textarea</mat-label>
-    <textarea matInput [(ngModel)]="enteredContent"></textarea>
-  </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Content</mat-label>
+      <textarea matInput ngModel name="content" required  #content="ngModel"></textarea>
+      <mat-error *ngIf="content.invalid">Please enter the content</mat-error>
+    </mat-form-field>
 
-  <button mat-raised-button color="primary" (click)="onSavePost()">
-    Save Post
-  </button>
+    <button mat-raised-button color="primary" type="submit">
+      Save Post
+    </button>
+  </form>
 </mat-card>
