--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,19 +1,20 @@
 <mat-card>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
     <mat-form-field appearance="fill">
       <mat-label>Title</mat-label>
-      <input matInput type="text" ngModel name="title" required #title="ngModel"/>
+      <input matInput type="text" [ngModel]="post?.title" name="title" required #title="ngModel"/>
       <mat-error *ngIf="title.invalid">Please enter a title</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Content</mat-label>
-      <textarea matInput ngModel name="content" required  #content="ngModel"></textarea>
+      <textarea matInput [ngModel]="post?.content" name="content" required  #content="ngModel"></textarea>
       <mat-error *ngIf="content.invalid">Please enter the content</mat-error>
     </mat-form-field>
 
     <button mat-raised-button color="primary" type="submit">
-      Save Post
+      {{ post ? 'Update Post' : 'Save Post' }}
     </button>
   </form>
 </mat-card>
