--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,4 +1,7 @@
-<mat-accordion multi="true" *ngIf="posts.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+
+
+<mat-accordion multi="true" *ngIf="posts.length > 0  && !isLoading">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
       <mat-panel-title>
@@ -7,10 +10,10 @@
     </mat-expansion-panel-header>
     <p>{{post.content}}</p>
     <mat-action-row>
-      <button mat-button color="primary">EDIT</button>
+      <button [routerLink]="['/edit', post.id]" routerLinkActive="router-link-active"  mat-button color="primary">EDIT</button>
       <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 
-<p class="mat-body-2 info-text" *ngIf="posts.length < 1">No posts added yet</p>
+<p class="mat-body-2 info-text" *ngIf="posts.length < 1 && !isLoading">No posts added yet</p>
