--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,16 +1,25 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+  <form (submit)="onSavePost()" [formGroup]="form" *ngIf="!isLoading">
     <mat-form-field appearance="fill">
       <mat-label>Title</mat-label>
-      <input matInput type="text" [ngModel]="post?.title" name="title" required #title="ngModel"/>
-      <mat-error *ngIf="title.invalid">Please enter a title</mat-error>
+      <input matInput type="text" formControlName='title'/>
+      <mat-error *ngIf="form.get('title').invalid">Please enter a title</mat-error>
     </mat-form-field>
+
+    <div>
+      <button mat-stroked-button color="primary" type="button" (click)="filePicker.click()">Pick Image</button>
+      <input type="file" name="" id="" #filePicker (change)="onImagePick($event)">
+    </div>
+
+    <div class="image-preview" *ngIf="imagePreview && form.get('image').valid">
+      <img [src]="imagePreview" [alt]="form.value.title">
+    </div>
 
     <mat-form-field appearance="fill">
       <mat-label>Content</mat-label>
-      <textarea matInput [ngModel]="post?.content" name="content" required  #content="ngModel"></textarea>
-      <mat-error *ngIf="content.invalid">Please enter the content</mat-error>
+      <textarea matInput name="content" formControlName="content"></textarea>
+      <mat-error *ngIf="form.get('content').invalid">Please enter the content</mat-error>
     </mat-form-field>
 
     <button mat-raised-button color="primary" type="submit">
